--- a/axeboat/page.html
+++ b/axeboat/page.html
@@ -85,6 +85,8 @@
 		
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="http://www.mixforpeace.fr/img/share/SPartage_200x200.jpg" />
+		<script src="/games/ruffle/ruffle.js"></script>
+
 
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/site.css">
